# tokencoder

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/hooks/: commit-msg  pre-commit
scripts/: prepare
src/tokencoder/: patterns.py  tokenizer.py  trainer.py  types.py
tests/: conftest.py  test_tokenizer.py  test_trainer.py
