[project]
name = "tokencoder"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "tiktoken>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
   "mypy>=1.10.1",
   "pytest-cov>=5.0.0",
   "ruff>=0.5.0",
   "mkdocs>=1.6.0",
   "mkdocstrings[python]>=0.25.1",
   "mkdocs-material>=9.5.29",
   "commitlint>=1.1.0",
]

[tool.rye.scripts]
test = { cmd = "pytest --cov=src/ tests/" }
test-ui = { cmd = "pytest --cov=src/ --cov-report=html tests/" }

fix = { chain = [
   "lint:ruff",
   "ruff format",
]}

"lint:ruff" = { cmd = "ruff check --fix" }
lint = { chain = [
   "lint:ruff",
   "mypy ."
]}

"docs:serve" = { cmd = "mkdocs serve -f mkdocs.yml" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
   # isort
   "I",
   # remove unused imports
   "F401",
]

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
known-first-party = ["tokenize", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 90

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tokencoder"]
